style.css
@keyframes autoBlurAnimation {
    0% {
        filter: blur(40px);
    }
    50%, 55%{
        filter: blur(0px);
    }
    100% {
        filter: blur(40px);
    }
}
@keyframes slideInUp {
    0% {
        opacity: 0;
        transform: translateY(-30px);
    }
    50%, 55%{
        opacity: 1;
        transform: translateY(0);
    }
    100%{
        opacity: 0;
        transform: translateY(30px);
    }
}
*{
    margin: 0;
    border: 0;
    font-family: "Inter", sans-serif;
}
a{
    text-decoration: none;
    color: inherit;
}
body{
    background: #000;
    color: white;
}
.logo{
    height: 50px;
    width: auto;
    filter: brightness(0) invert(1);
}
.logowrap{
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 30px;
    left: 75px;
    background-color: #151517;
    height: 80px;
    width: 80px;
    border-radius: 50%;
    z-index: 100;
}
.hero{
    text-align: center;
    height: 100dvh;
    width: 100vw;
}
.hero h1{
    padding-top: 45vh;
    font-size: 4.5rem;
    font-weight: 250;
}
.hero h1 span{
    color: #60667B;
}
.hero p{
    margin-top: 20px;
    font-size: 1.2vw;
    font-weight: 150;
}
.about{
    padding-right: 30px;
    padding-left: 30px;
    text-align: center;
    font-weight: 100;
}
.about p{
    font-size: 3rem;
    color: #60667B;
}
.about p span{
    color: white;
}
.about h1{
    margin-top: 300px;
    margin-bottom: 100px;
    font-weight: 100;
    font-size: 7rem;
    animation: slideInUp 1s;
    animation-timeline: view();
}
.about h3{
    padding-top: 10px;
    text-wrap:  nowrap;
    font-size: 5.5rem;
    color: #9099ba;
}
.autoBlur{
    animation: autoBlurAnimation linear both;
    animation-timeline: view();
}
.about a{
    font-size: 3rem;
}

